--- a/client/e-commerce/package.json
+++ b/client/e-commerce/package.json
@@ -19,7 +19,9 @@
     "normalize.css": "^8.0.1",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
-    "sass": "^1.86.3"
+    "react-hook-form": "^7.56.2",
+    "sass": "^1.86.3",
+    "zod": "^3.24.4"
   },
   "devDependencies": {
     "@eslint/eslintrc": "^3",
