--- a/server/ecommerce/src/main/resources/application.yaml
+++ b/server/ecommerce/src/main/resources/application.yaml
@@ -6,6 +6,7 @@ server:
 spring:
   datasource:
     url: "jdbc:mysql://localhost:3306/ecommerce"
+    driverClassName: "com.mysql.cj.jdbc.Driver"
     username: root
     password: 43danang211
   jpa:
