--- a/client/e-commerce/package.json
+++ b/client/e-commerce/package.json
@@ -15,6 +15,7 @@
     "antd": "^5.24.6",
     "classnames": "^2.5.1",
     "clsx": "^2.1.1",
+    "jose": "^6.0.11",
     "next": "15.2.4",
     "normalize.css": "^8.0.1",
     "react": "^19.0.0",
