--- a/server/ecommerce/pom.xml
+++ b/server/ecommerce/pom.xml
@@ -32,6 +32,7 @@
 		<mapstruct.version>1.5.5.Final</mapstruct.version>
 		<lombok-mapstruct-binding.version>0.2.0</lombok-mapstruct-binding.version>
 		<spotless.version>2.43.0</spotless.version>
+		<cloudinary.version>2.2.0</cloudinary.version>
 	</properties>
 	<dependencies>
 		<dependency>
@@ -101,6 +102,18 @@
 			<artifactId>spotless-lib-extra</artifactId>
 			<version>${spotless.version}</version>
 			<scope>compile</scope>
+		</dependency>
+
+<!--		<dependency>-->
+<!--			<groupId>com.cloudinary</groupId>-->
+<!--			<artifactId>cloudinary-core</artifactId>-->
+<!--			<version>${cloudinary.version}</version>-->
+<!--		</dependency>-->
+
+		<dependency>
+			<groupId>com.cloudinary</groupId>
+			<artifactId>cloudinary-http45</artifactId>
+			<version>1.38.0</version>
 		</dependency>
 	</dependencies>
 
