--- a/client/e-commerce/package.json
+++ b/client/e-commerce/package.json
@@ -12,10 +12,13 @@
     "@ant-design/icons": "^5.6.1",
     "@ant-design/nextjs-registry": "^1.0.2",
     "@ant-design/v5-patch-for-react-19": "^1.0.3",
+    "@types/js-cookie": "^3.0.6",
     "antd": "^5.24.6",
     "classnames": "^2.5.1",
     "clsx": "^2.1.1",
     "jose": "^6.0.11",
+    "js-cookie": "^3.0.5",
+    "jwt-decode": "^4.0.0",
     "next": "15.2.4",
     "normalize.css": "^8.0.1",
     "react": "^19.0.0",
