--- a/client/e-commerce/package.json
+++ b/client/e-commerce/package.json
@@ -19,7 +19,7 @@
     "jose": "^6.0.11",
     "js-cookie": "^3.0.5",
     "jwt-decode": "^4.0.0",
-    "next": "15.2.4",
+    "next": "^15.3.3",
     "normalize.css": "^8.0.1",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
